# chainboard-atom-framework

./: .gitignore  LICENSE  PROTOCOL.md  README.md  pyproject.toml
api_app/: __init__.py  config.py  main.py
api_app/routers/: example.py
api_app/services/: __init__.py  example_service.py
config/: _cfg.json.example
module/: __init__.py  _base.py  _chain.py  _scanner.py  example.py  services.py  services_example.py
module/atoms/: __init__.py  example_io.py
sdk/: __init__.py  exceptions.py
tests/: test_chain.py  test_scanner.py
